include/llama.h

#define LLAMA_DEFAULT_SEED 0xFFFFFFFF
#define LLAMA_TOKEN_NULL -1
    struct llama_vocab;
    struct llama_model;
    struct llama_context;
    struct llama_sampler;
    typedef struct llama_memory_i * llama_memory_t;
    typedef int32_t llama_pos;
    typedef int32_t llama_token;
    typedef int32_t llama_seq_id;
    enum llama_vocab_type {
        LLAMA_VOCAB_TYPE_NONE   = 0, 
        LLAMA_VOCAB_TYPE_SPM    = 1, 
        LLAMA_VOCAB_TYPE_BPE    = 2, 
        LLAMA_VOCAB_TYPE_WPM    = 3, 
        LLAMA_VOCAB_TYPE_UGM    = 4, 
        LLAMA_VOCAB_TYPE_RWKV   = 5, 
        LLAMA_VOCAB_TYPE_PLAMO2 = 6, 
    };
    enum llama_rope_scaling_type {
        LLAMA_ROPE_SCALING_TYPE_UNSPECIFIED = -1,
        LLAMA_ROPE_SCALING_TYPE_NONE        = 0,
        LLAMA_ROPE_SCALING_TYPE_LINEAR      = 1,
        LLAMA_ROPE_SCALING_TYPE_YARN        = 2,
        LLAMA_ROPE_SCALING_TYPE_LONGROPE    = 3,
        LLAMA_ROPE_SCALING_TYPE_MAX_VALUE   = LLAMA_ROPE_SCALING_TYPE_LONGROPE,
    };
    enum llama_pooling_type {
        LLAMA_POOLING_TYPE_UNSPECIFIED = -1,
        LLAMA_POOLING_TYPE_NONE = 0,
        LLAMA_POOLING_TYPE_MEAN = 1,
        LLAMA_POOLING_TYPE_CLS  = 2,
        LLAMA_POOLING_TYPE_LAST = 3,
        LLAMA_POOLING_TYPE_RANK = 4, 
    };
    enum llama_attention_type {
        LLAMA_ATTENTION_TYPE_UNSPECIFIED = -1,
        LLAMA_ATTENTION_TYPE_CAUSAL      = 0,
        LLAMA_ATTENTION_TYPE_NON_CAUSAL  = 1,
    };
    enum llama_flash_attn_type {
        LLAMA_FLASH_ATTN_TYPE_AUTO     = -1,
        LLAMA_FLASH_ATTN_TYPE_DISABLED = 0,
        LLAMA_FLASH_ATTN_TYPE_ENABLED  = 1,
    };
    enum llama_split_mode {
        LLAMA_SPLIT_MODE_NONE   = 0, 
        LLAMA_SPLIT_MODE_LAYER  = 1, 
        LLAMA_SPLIT_MODE_ROW    = 2, 
        LLAMA_SPLIT_MODE_TENSOR = 3,
    };
    enum llama_load_mode {
        LLAMA_LOAD_MODE_NONE       = 0, 
        LLAMA_LOAD_MODE_MMAP       = 1, 
        LLAMA_LOAD_MODE_MLOCK      = 2, 
        LLAMA_LOAD_MODE_MMAP_MLOCK = 3, 
        LLAMA_LOAD_MODE_DIRECT_IO  = 4, 
    };
    enum llama_context_type {
        LLAMA_CONTEXT_TYPE_DEFAULT = 0,
        LLAMA_CONTEXT_TYPE_MTP     = 1,
        LLAMA_CONTEXT_TYPE_OPT     = 2, 
    };
    typedef struct llama_token_data {
        llama_token id; 
        float logit;    
        float p;        
    } llama_token_data;
    typedef struct llama_token_data_array {
        llama_token_data * data;
        size_t size;
        int64_t selected; 
        bool sorted;      
    } llama_token_data_array;
    typedef bool (*llama_progress_callback)(float progress, void * user_data);
    typedef struct llama_batch {
        int32_t n_tokens;
        llama_token  *  token;
        float        *  embd;
        llama_pos    *  pos;
        int32_t      *  n_seq_id;
        llama_seq_id ** seq_id;
        int8_t       *  logits;   
    } llama_batch;
    enum llama_model_kv_override_type {
        LLAMA_KV_OVERRIDE_TYPE_INT,
        LLAMA_KV_OVERRIDE_TYPE_FLOAT,
        LLAMA_KV_OVERRIDE_TYPE_BOOL,
        LLAMA_KV_OVERRIDE_TYPE_STR,
    };
    struct llama_model_kv_override {
        enum llama_model_kv_override_type tag;
        char key[128];
        union {
            int64_t val_i64;
            double  val_f64;
            bool    val_bool;
            char    val_str[128];
        };
    };
    struct llama_model_tensor_buft_override {
        const char * pattern;
        ggml_backend_buffer_type_t buft;
    };
    struct llama_model_params {
        ggml_backend_dev_t * devices;
        const struct llama_model_tensor_buft_override * tensor_buft_overrides;
        int32_t n_gpu_layers; 
        enum llama_split_mode split_mode; 
        enum llama_load_mode  load_mode;  
        int32_t main_gpu;
        const float * tensor_split;
        llama_progress_callback progress_callback;
        void * progress_callback_user_data;
        const struct llama_model_kv_override * kv_overrides;
        bool vocab_only;      
        bool check_tensors;   
        bool use_extra_bufts; 
        bool no_host;         
        bool no_alloc;        
        bool load_mtp;        
    };
    struct llama_sampler_seq_config {
        llama_seq_id           seq_id;
        struct llama_sampler * sampler;
    };
    struct llama_context_params {
        uint32_t n_ctx;                 
        uint32_t n_batch;               
        uint32_t n_ubatch;              
        uint32_t n_seq_max;             
        uint32_t n_rs_seq;              
        uint32_t n_outputs_max;         
        uint32_t n_outputs_max_per_seq; 
        int32_t  n_threads;             
        int32_t  n_threads_batch;       
        enum llama_context_type      ctx_type;          
        enum llama_rope_scaling_type rope_scaling_type; 
        enum llama_pooling_type      pooling_type;      
        enum llama_attention_type    attention_type;    
        enum llama_flash_attn_type   flash_attn_type;   
        float    rope_freq_base;   
        float    rope_freq_scale;  
        float    yarn_ext_factor;  
        float    yarn_attn_factor; 
        float    yarn_beta_fast;   
        float    yarn_beta_slow;   
        uint32_t yarn_orig_ctx;    
        float    defrag_thold;     
        ggml_backend_sched_eval_callback cb_eval;
        void * cb_eval_user_data;
        enum ggml_type type_k; 
        enum ggml_type type_v; 
        ggml_abort_callback abort_callback;
        void *              abort_callback_data;
        bool embeddings;  
        bool offload_kqv; 
        bool no_perf;     
        bool op_offload;  
        bool swa_full;    
        bool kv_unified;  
        struct llama_sampler_seq_config * samplers;
        size_t                            n_samplers;
        struct llama_context * ctx_other;
    };
    typedef struct llama_sampler_chain_params {
        bool no_perf; 
    } llama_sampler_chain_params;
    typedef struct llama_chat_message {
        const char * role;
        const char * content;
    } llama_chat_message;
    LLAMA_API struct llama_model_params          llama_model_default_params(void);
    LLAMA_API struct llama_context_params        llama_context_default_params(void);
    LLAMA_API struct llama_sampler_chain_params  llama_sampler_chain_default_params(void);
    LLAMA_API void llama_backend_init(void);
    LLAMA_API void llama_backend_free(void);
    LLAMA_API void llama_numa_init(enum ggml_numa_strategy numa);
    LLAMA_API struct llama_model * llama_model_load_from_file(
                             const char * path_model,
              struct llama_model_params   params);
    LLAMA_API void llama_model_save_to_file(
            const struct llama_model * model,
                        const char * path_model);
    LLAMA_API void llama_model_free(struct llama_model * model);
    LLAMA_API struct llama_context * llama_init_from_model(
                     struct llama_model * model,
            struct llama_context_params   params);
    LLAMA_API void llama_free(struct llama_context * ctx);
    LLAMA_API int64_t llama_time_us(void);
    LLAMA_API size_t llama_max_parallel_sequences(void);
    LLAMA_API uint32_t llama_n_ctx      (const struct llama_context * ctx);
    LLAMA_API uint32_t llama_n_ubatch   (const struct llama_context * ctx);
    LLAMA_API uint32_t llama_n_seq_max  (const struct llama_context * ctx);
    LLAMA_API const struct llama_model * llama_get_model   (const struct llama_context * ctx);
    LLAMA_API           llama_memory_t   llama_get_memory  (const struct llama_context * ctx);
    LLAMA_API  enum llama_pooling_type   llama_pooling_type(const struct llama_context * ctx); 
    LLAMA_API const struct llama_vocab * llama_model_get_vocab(const struct llama_model * model);
    LLAMA_API int32_t llama_model_n_ctx_train  (const struct llama_model * model);
    LLAMA_API int32_t llama_model_n_embd_out   (const struct llama_model * model);
    LLAMA_API uint32_t llama_model_n_cls_out(const struct llama_model * model);
    LLAMA_API const char * llama_model_cls_label(const struct llama_model * model, uint32_t i);
    LLAMA_API enum llama_vocab_type llama_vocab_type(const struct llama_vocab * vocab);
    LLAMA_API int32_t llama_vocab_n_tokens(const struct llama_vocab * vocab);
    LLAMA_API int32_t llama_model_meta_val_str(const struct llama_model * model, const char * key, char * buf, size_t buf_size);
    LLAMA_API const char * llama_model_chat_template(const struct llama_model * model, const char * name);
    LLAMA_API bool llama_model_has_encoder(const struct llama_model * model);
    LLAMA_API bool llama_model_has_decoder(const struct llama_model * model);
    LLAMA_API llama_token llama_model_decoder_start_token(const struct llama_model * model);
    LLAMA_API bool llama_model_is_diffusion(const struct llama_model * model);
    LLAMA_API void llama_memory_clear(
            llama_memory_t mem,
                      bool data);
    LLAMA_API bool llama_memory_seq_rm(
            llama_memory_t mem,
              llama_seq_id seq_id,
                 llama_pos p0,
                 llama_pos p1);
    LLAMA_API void llama_memory_seq_cp(
            llama_memory_t mem,
              llama_seq_id seq_id_src,
              llama_seq_id seq_id_dst,
                 llama_pos p0,
                 llama_pos p1);
    LLAMA_API void llama_memory_seq_keep(
            llama_memory_t mem,
              llama_seq_id seq_id);
    LLAMA_API void llama_memory_seq_add(
            llama_memory_t mem,
              llama_seq_id seq_id,
                 llama_pos p0,
                 llama_pos p1,
                 llama_pos delta);
    LLAMA_API void llama_memory_seq_div(
            llama_memory_t mem,
              llama_seq_id seq_id,
                 llama_pos p0,
                 llama_pos p1,
                       int d);
    LLAMA_API llama_pos llama_memory_seq_pos_max(
            llama_memory_t mem,
              llama_seq_id seq_id);
    LLAMA_API void llama_set_n_threads(struct llama_context * ctx, int32_t n_threads, int32_t n_threads_batch);
    LLAMA_API const char * llama_vocab_get_text(const struct llama_vocab * vocab, llama_token token);
    LLAMA_API bool llama_vocab_is_eog(const struct llama_vocab * vocab, llama_token token);
    LLAMA_API llama_token llama_vocab_bos(const struct llama_vocab * vocab); 
    LLAMA_API llama_token llama_vocab_eos(const struct llama_vocab * vocab); 
    LLAMA_API llama_token llama_vocab_eot(const struct llama_vocab * vocab); 
    LLAMA_API llama_token llama_vocab_sep(const struct llama_vocab * vocab); 
    LLAMA_API llama_token llama_vocab_mask(const struct llama_vocab * vocab); 
    LLAMA_API bool llama_vocab_get_add_bos(const struct llama_vocab * vocab);
    LLAMA_API bool llama_vocab_get_add_eos(const struct llama_vocab * vocab);
    LLAMA_API bool llama_vocab_get_add_sep(const struct llama_vocab * vocab);
    typedef void * llama_sampler_context_t;
    struct llama_sampler_i {
        const char *           (*name)  (const struct llama_sampler * smpl);                                 
        void                   (*accept)(      struct llama_sampler * smpl, llama_token token);              
        void                   (*apply) (      struct llama_sampler * smpl, llama_token_data_array * cur_p); 
        void                   (*reset) (      struct llama_sampler * smpl);                                 
        struct llama_sampler * (*clone) (const struct llama_sampler * smpl);                                 
        void                   (*free)  (      struct llama_sampler * smpl);                                 
        bool (*backend_init)(
                struct llama_sampler       * smpl,
                ggml_backend_buffer_type_t   buft,
                uint32_t                     n_outputs_max_per_seq);
        void (*backend_accept)(
                struct llama_sampler * smpl,
                struct ggml_context  * ctx,
                struct ggml_cgraph   * gf,
                struct ggml_tensor   * selected_token);
        void (*backend_apply)(
                struct llama_sampler      * smpl,
                struct ggml_context       * ctx,
                struct ggml_cgraph        * gf,
                struct llama_sampler_data * data);
        void (*backend_set_input)(struct llama_sampler * smpl);
        void (*backend_reset)(struct llama_sampler * smpl);
        void (*copy_state)(const struct llama_sampler * src, struct llama_sampler * dst);
    };
    struct llama_sampler {
        struct llama_sampler_i * iface;
        llama_sampler_context_t ctx;
    };
    LLAMA_API void llama_log_set(ggml_log_callback   log_callback, void *  user_data);
    typedef bool (*llama_opt_param_filter)(const struct ggml_tensor * tensor, void * userdata);
    struct llama_opt_params {
        uint32_t n_ctx_train; 
        llama_opt_param_filter param_filter; 
        void * param_filter_ud;              
        ggml_opt_get_optimizer_params get_opt_pars; 
        void * get_opt_pars_ud;                     
        enum ggml_opt_optimizer_type optimizer_type;
    };